# ncnnTest

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: main.cpp.AFFD970EB6303926.idx  omp_test.cpp.4770B918E3743E9C.idx  utility.cpp.C344788C84CE5E83.idx  utility.h.2E2475B6EB2568E4.idx
utility/: utility.cpp  utility.h
